[package]
name = "wasmcxx"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.27"
console_log = { version = "1.0.0" }
cxx = "1.0"
getrandom = { version = "0.2.15", features = ["js"] }
iced = "0.13"
log = "0.4.22"
rand = "0.8.5"
wasm-bindgen = "0.2.95"
wasm-bindgen-test = "0.3.45"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.13", features = ["webgl"] }
console_error_panic_hook = "0.1.7"

[build-dependencies]
autocxx-build = "0.27"
cc = "1.1.31"
cxx-build = { version = "1.0", features = ["parallel"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false